--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         import "./node_modules/crs-binding/crs-binding.js";
         import "./node_modules/crs-modules/crs-modules.js";
         import "./node_modules/crs-router/crs-router.js";
+        import "./node_modules/crs-process-api/crs-process-api.js";
         import IndexViewModel from "./index.js";
 
         async function load() {
